Html commentes added, fixed bar z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,7 @@ a {
 .fixedbar {
     position: fixed;
     top: 0;
+    z-index: 2;
     border-bottom: 1px solid #33475B;
     box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.1);
 }
@@ -350,6 +351,7 @@ a {
 }
 
 .community-board {
+    position: relative;
     padding-top: 30px;
 }
 .community-board .row-separator {
